# CVector

./: .gitignore  CMakeLists.txt  README.md  shell.nix
libsrc/: CMakeLists.txt  vector.h
libsrc/_cvector_private_/: _private.h
libsrc/include/: vector.h
libsrc/private/: private_macros.h  vector.c
